--- a/pknews/manifest.json
+++ b/pknews/manifest.json
@@ -6,7 +6,7 @@
   "scope": "/",
   "lang": "ur",
   "description": "Daily updated newspapers",
-  "theme_color": "RoyalBlue",
+  "theme_color": "#4169e1",
   "background_color": "none",
   "icons": [
     {
