--- a/newspapers/manifest.json
+++ b/newspapers/manifest.json
@@ -123,7 +123,7 @@
       "purpose": "any"
     },
     {
-      "src": "images/1240x1240.png"
+      "src": "images/1240x1240.png",
       "type": "image/png",
       "sizes": "1240x1240",
       "purpose": "any"
