--- a/newspapers/manifest.json
+++ b/newspapers/manifest.json
@@ -3,7 +3,7 @@
   "background_color": "none",
   "display": "fullscreen",
   "scope": "/",
-  "start_url": "https://shahfahad19.github.io/newspapers",
+  "start_url": "https://shahfahad19.github.io/newspapers/",
   "name": "Pakistani Newspapers (Coded By Shah Fahad) ",
   "short_name": "Pakistani Newspapers",
   "description": "Daily Urdu Newspapers! ",
