--- a/bill/manifest.json
+++ b/bill/manifest.json
@@ -2,8 +2,8 @@
     "theme_color": "#008dd3",
     "background_color": "#008dd3",
     "display": "standalone",
-    "scope": "/",
-    "start_url": "/",
+    "scope": "/bill/",
+    "start_url": "https://shahfahad19.github.io/bill",
     "name": "Pesco Bill Checker",
     "short_name": "Pesco Bill",
     "description": "Check online pesco bills",
